2235
Replying to [comment:4 dcaoyuan]:
> For 2.8.0, my environment is:
> Mac OS X 10.5.8
> java version "1.6.0_13"
> java version "1.5.0_19"

Just for you I built r18542 specifically.  I'm on the same OS using the same javas.  They both do the same thing:
```scala
$$ /scala/trunk/build/pack/bin/scalac a.scala 
a.scala:5: error: value a is not a member of B
    "" + b.a // `a` is not member of `B`
           ^
one error found
```

Obviously a third person's results would be helpful here, but you're going to have to trust me that this is pretty much a lock to be something specific to your environment.  If code like that crashed on compilation I would personally have encountered it a thousand times, and there would be a million tickets.

I'm hard pressed to even guess.  Do you have any other files in the directory with this test case? There is at least one weird bug where a different file called B.scala could be influencing things when fsc is used.
